--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -36,11 +36,11 @@
         </div>
 
         <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="/submitContact" method="POST" role="form">
+            <form action="/submitContact" method="POST">
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="name">Your Name</label>
-                        <input type="text" name="name" class="form-control" data-rule="minlen:4"
+                        <input type="text" class="form-control" name="name" data-rule="minlen:4"
                             data-msg="Please enter at least 4 chars" required>
                         <div class="validate"></div>
                     </div>
@@ -68,7 +68,7 @@
                     <div class="error-message"></div>
                     <div class="sent-message">Your message has been sent. Thank you!</div>
                 </div>
-                <div class="text-center"><button type="submit">Send Message</button></div>
+                <div class="text-center"><button>Send Message</button></div>
             </form>
         </div>
     </div>
