--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="/assets/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/style.css">
+
+    <!-- TinyMCE JS -->
+    <script src="https://cdn.tiny.cloud/1/59ea6kieiwdk1e1fddopjvc1da3cr4sqngcvgwef3r2hc0st/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
 </head>
 <body>
     <div class="container-fluid" style="padding-left: 0; padding-right: 0;">
